Closed
Bug 203349
Opened 22 years ago
Closed 21 years ago
Scrolling while any tab is loading causes blocks of content to shift
Categories
(Camino Graveyard :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino0.8
People
(Reporter: mozilla, Assigned: mikepinkerton)
References
()
Details
Attachments
(6 files)
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.4b) Gecko/20030423 Chimera/0.7+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.4b) Gecko/20030423 Chimera/0.7+
When scrolling the Google News page, I notice that when you scroll, the page
simply gets distorted and drawn incorrectly. Text gets printed over other text,
bits of color are scattered about, etc. I will upload a screenshot so that
everyone knows what I'm talking about. Hitting Command-A to select all text
quickly fixes the problem, but getting the problem to resolve itself just by
scrolling often times doesn't do the job.
Reproducible: Sometimes
Steps to Reproduce:
1. Go to Google News and scroll down the page.
2. Now try to move up or down slowly, either by using the arrow keys on the
keyboard or the scroll bar. You'll notice text gets distorted.
Actual Results:
Text got distorted and bits and pieces of color were left all over the place.
Expected Results:
It should have scrolled smoothly without the page being displayed incorrectly.
Reporter | ||
Comment 1•22 years ago
|
||
Comment 2•22 years ago
|
||
WFM 2003042505
Looks like video card problems. Vince, what kind of video card do you use?
Reporter | ||
Comment 4•22 years ago
|
||
My computer is an FP iMac G4 700 MHz. Video card is a GeForce2 MX with 32 MB VRAM.
Assignee | ||
Comment 5•21 years ago
|
||
this has been fixed.
Status: UNCONFIRMED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 6•21 years ago
|
||
Distortion here too, as well as at other sites. This picture was taken today
(2003/09/22) on macnn.com.
Reporter | ||
Comment 7•21 years ago
|
||
I've been experiencing this same problem with some of the new builds. I'm using
Build ID 2003091402. Like I said, it happens intermittenly, but enough to cause
some trouble with reading pages.
Status: RESOLVED → UNCONFIRMED
Resolution: FIXED → ---
Comment 8•21 years ago
|
||
this seems to happen all the time on my system if the page is scrolled while
images are still loading. I'm using an iBook 700 (radeon).
I can reproduce this almost every time a page with images is loading.
This happens to me too on a number of sites in any build from 0.7 on. Original
iMac 17". dragging to select the text usually fixes the problem for the current
page.
Comment 10•21 years ago
|
||
I'm not seeing this bug at Google News but I have experienced it in the past at
other sites and it did appear related to scrolling while images were in the
process of loading.
I think Aint-it-Cool news is a typical offender but it didn't show itself when
testing using build 2004012703 (v0.7+)
Comment 11•21 years ago
|
||
I can confirm this bug on a G4 733 with Geforce2 MX 1152x870. Hard to
reproduce, though.
Comment 12•21 years ago
|
||
The problem by which this text gets distorted was before reproduced also by
firebird.
But Recently, this problem is not encountered.
Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; ja-JP; rv:1.7b) Gecko/20040304
Camino/0.7+
Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; ja-JP; rv:1.7b) Gecko/20040305
Firefox/0.8.0+
Comment 13•21 years ago
|
||
This is still a problem with latest builds (2004031908) on Panther (10.3.2).
Normally okay if no network activity - but almost all web pages corrupt if I'm
loading another page in a background tab.
The distortion (if not the stimulus) look very similar to those in bug 222972.
To help narrow this down it would be useful to know if whether people
experiencing this bug are using Jaguar (10.2.*) or Panther (10.3.*).
Comment 14•21 years ago
|
||
Updating summary (was "Page is distorted when scrolling up and down") and
confirming. Also bumping its severity, since for people on slow connections who
use tabs heavily, this is especially annoying.
I'll post a new screenshot shortly, since I suspect that the first screenshot is
from another, older bug that has been fixed (per comment 5)
Assignee: saari → pinkerton
Severity: normal → major
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: Page is distorted when scrolling up and down → Scrolling while background tabs are loading causes blocks of content to shift
Target Milestone: --- → Camino0.9
Comment 15•21 years ago
|
||
(carrying in from bug 222972 -- thanks, Stuart)
Here's a screen shot using Camino (2004040108) under 10.2.8 on a 667MHz Ti
PBG4, 1GB RAM, 16MB Radeon Mobility.
1) Open a Camino window with two tabs
2) In the first tab, begin loading an image slowly
3) In the second tab, load Mozillazine or something
4) Scroll around -- use arrow keys, scrollbar, whatever
5) Watch for sections of the page to be jumbled up
FWIW, it's necessary to capture the full screen first and then crop that.
Using the system's feature to select a rectangular area allows the window
content to redraw correctly first.
Comment 16•21 years ago
|
||
Here's the test case used to create attachment 145715 [details]. It's just one way to
make the image continue slowly loading under one tab in the background, while
scrolling around with another tab in the foreground.
Comment 17•21 years ago
|
||
The loading pages don't have to be in the background, it turns out. After
taking this shot I played some more and found that while I couln't reproduce
this at all while loading slashdot in its own window, I could reproduce it
easily by simply opening a new, completely empty tab, then scrolling slashdot
while loading.
Comment 18•21 years ago
|
||
On a hunch, I made a build with no tab progress spinner. I haven't tested
extensively, but after several tries I was unable to reproduce the problem using
that build and my slashdot test (which shows the problem quite reliably in a
build that's identical except for having tab throbbers).
I'll use this build for a while to make sure, but at this point I'm feeling
pretty good about blaming the progress spinner.
The next question is, "why?". Any theories, given that it's only supposed to be
invalidating its own rect?
Comment 19•21 years ago
|
||
Patch to disable the tab progress spinner, for anyone else who wants to help
determine whether or not it's the problem.
Comment 20•21 years ago
|
||
I also get this (Camino nightly on iBook 2002 DualUSB w Rage128 8Mb, 10.2.8).
It's related to scrolling, because I can get this on the bookmark dropdown list too:
- Create a huge bookmark list (easy! :)
- Open the bookmarks, use pointer on scroll down arrow at bottom to scroll list.
Try to scroll slowly. The list gets corrupted.
I can even reproduce this phenomenon over a VNC connection, i.e it's not my
videocard (phew!).
I have a faint recollection that I can get this on other scrolling widgets in
Mac OS X, and planned to submit a bug to Apple, but have been unable to
reproduce it anywhere else but in Camino now...
(If you want to try: Put a big folder, eg Applications, in the Dock. Click and
hold icon until a list of all items is shown. Scroll in list. Get any
corruption? I recall I have, but can't reproduce now)
Comment 21•21 years ago
|
||
Comment 20 sounds more like bug 176297
Comment 22•21 years ago
|
||
After some testing and research the following result where seen:
The clutter is indeed triggerd by form elements (on a clean launch):
1) load 2 pages, 1 in each tab. Make sure the pages don not contain any form
eements what so ever. and you will see no problems will occur.
2) load 2 pages, 1 in each tab. Make sure the page in the that is loading in the
backround has no form elements, and the page in the foreground does have. You
will see the problem will occur at places for elements are situated. Using
Quarzt Debug it can be seen even better.
3) after doing example 2 and then going with the foreground tab to a new page
will show that the clutter even goes accross webpages with no form elemnts.
Conclusion: there is something pretty wrong with how form controls are handled
by Gecko and how they are buffered.
Comment 23•21 years ago
|
||
Been having this for a while now.. at least a weeks' worth of builds.
Comment 24•21 years ago
|
||
This is a candidate for an OS bug. I was using Mail today, and noticed that I
was seeing very similar shearing while scrolling up and down in the inline
message viewer.
I did some playing around, and found that it's 100% reproducible in both the
preview pane and the message listing. But *only* ... wait for it ... while the
little toolbar progress spinner is going (e.g., during a send or recieve operation).
So what's the next step in deciding whether to report this as an OS bug?
Comment 25•21 years ago
|
||
Sorry, that should read "status bar progress spinner", not toolbar.
Comment 26•21 years ago
|
||
Just for reference, bug 164234 has some discussion of the erronious repaint
areas Jasper talks about in comment 22
Comment 27•21 years ago
|
||
This is still a problem with Camino 2004051715 (v0.8b). I am running Mac OS
10.2.8 on a 400 MHz PowerBook G4 with an ATI Rage 128 Pro graphics card.
This bug really damages the user experience of Camino and if there's a chance
disabling the progress indicator will fix it, I would strongly recommend
disabling it in the next version. The bug is very difficult to reliably
reproduce but I've been keeping an eye out for it and every 20 or so times it
has happened there has been a tab loading in the background.
Sadly, I don't have the resources to try out the patch.
Comment 28•21 years ago
|
||
Moving this up to 0.8
It's pretty much 100% reproducible when a tab spinner is going and the current
window has ever had a form control in it. This is by far the most visible
rendering problem for many people.
If we don't find a real fix before 0.8f, we can just disable the tab spinners
for 10.3.
Target Milestone: Camino0.9 → Camino0.8
Comment 29•21 years ago
|
||
I hope not just 10.3. I'm using 10.2, and I also see this problem under the
same circumstances. Likewise a friend who also uses 10.2.
Thanks.
Updated•21 years ago
|
Summary: Scrolling while background tabs are loading causes blocks of content to shift → Scrolling while any tab is loading causes blocks of content to shift
Assignee | ||
Comment 30•21 years ago
|
||
so what's the plan here? ditch the spinners?
Comment 31•21 years ago
|
||
Yeah let's ditch them untill we find a more solid solution.
Comment 32•21 years ago
|
||
A white square spot sometimes appears in the position of spinners, when I open a
new tab.
So it's better to ditch the spinners for now.
Reporter | ||
Comment 33•21 years ago
|
||
Is it the animation of the spinner that causes the problem? Because I'd still
like to see an icon to indicate the site is still loading (not animated).
Comment 34•21 years ago
|
||
> Is it the animation of the spinner that causes the problem? Because I'd still
> like to see an icon to indicate the site is still loading (not animated).
Yes, turning off animation is enough, and I'd like an indicator as well. The
problem is that using the spinners without animation makes the tabs look hung or
broken. Can anyone think of a good static wait indicator?
Reporter | ||
Comment 35•21 years ago
|
||
Well, current tabs that don't have a favicon use a globe as their icon. We could
use a darkened version of that globe as the icon instead. So multiple tabs would
either turn to favicons or would "light up" upon loading completion.
Comment 36•21 years ago
|
||
Disabling the spinner may get rid of the visible manifestation of this bug, but
the underlying cause is unaddressed. Has anyone looked into why the forms
widgets are causing the problem in the first place? Does any Aqua widget on a
page cause the problem, or is it a specific subset? Is this an Apple bug? If
anyone is going to WWDC, maybe they can raise the issue there, one of the Apple
engineers might have some idea.
For an interim "loading" widget, how about an "inactive" looking version of the
favicon for the site (like greyscale and drawn at 50% or whatever the proper
look Apple uses for their inactive widgets is), then draw it normally when the
site is loaded.
And cheers to Camino for using keychain because that's the only way I had to
access the bugzilla account I created with my old email address :).
Assignee | ||
Comment 37•21 years ago
|
||
removed on trunk and branch, closing bug as this is fixed. filed bug 246998 to
re-enable the spinner when we have a fix.
Status: NEW → RESOLVED
Closed: 21 years ago → 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•