remove progress spinner until redraw problems while scrolling can be fixed (bug 203349)